[package]
name = "kube-example-cnat"
version = "0.1.0"
description = "Cloud Native at. Runs `command` at `schedule` by creating a Pod."
keywords = ["kubernetes", "k8s", "kube", "example"]
homepage = "https://github.com/kazk/cnat-rs"
repository = "https://github.com/kazk/cnat-rs"
readme = "README.md"
authors = ["kazk <kazk.dev@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[[bin]]
name = "cnat"
path = "src/main.rs"

[dependencies]
argh = "0.1.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.5"
kube = { version = "0.50.1", features = ["derive"] }
kube-runtime = "0.50.1"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1"
tokio = { version = "1.2.0", features = ["macros", "rt", "rt-multi-thread"] }
schemars = { version = "0.8.0", features = ["chrono"] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"

[profile.release]
lto = true
