[package]
name = "cnat"
version = "0.1.0"
description = "Cloud Native at. Runs `command` at `schedule` by creating a Pod."
keywords = ["kubernetes", "k8s", "kube", "example"]
homepage = "https://github.com/kazk/cnat-rs"
repository = "https://github.com/kazk/cnat-rs"
readme = "README.md"
authors = ["kazk <kazk.dev@gmail.com>"]
license = "Apache-2.0"
rust-version = "1.56"
edition = "2021"
default-run = "cnat"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.15"
kube = { version = "0.69.1", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_20"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
schemars = { version = "0.8.3", features = ["chrono"] }
thiserror = "1.0.30"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

[dev-dependencies]
xid = "1.0.0"

[profile.release]
lto = true
